--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<html ng-app="lanchonete">
+<html ng-app="laboratory">
 
 <head>
     <meta charset="UTF-8">
-    <title>Lanchonete</title>
-    <link rel="shortcut icon" type="image/x-icon" href="view/images/hamburguerIcone.ico">
+    <title>Laboratórios</title>
+    <link rel="shortcut icon" type="image/x-icon" href="view/images/laboratory.png">
     <link rel="stylesheet" type="text/css" href="lib/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/app.css">
     <script src="lib/angular/angular.js"></script>
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div ng-include="'view/cabecarioLanchonete.html'"></div>
+    <div ng-include="'view/header-laboratory.html'"></div>
 
     <ng-view></ng-view>
 
